--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,6 @@
       ]
     }
   },
-  "include": ["src"],
+  "include": ["src", "src/types.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
