--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.0",
     "tailwind-merge": "^2.1.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
