--- a/package.json
+++ b/package.json
@@ -44,5 +44,9 @@
     "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
+  },
+  "volta": {
+    "node": "20.10.0",
+    "npm": "10.2.3"
   }
 }
